# pydantic_ai_example

./: .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  gunicorn.conf.py  justfile  manage.py  pyproject.toml
.github/workflows/: ci.yml
src/backend/api/: admin.py  api.py  apps.py  consumers.py  routing.py
src/backend/api/templates/api/: websocket_test.html
src/backend/project/: asgi.py  settings.py  urls.py
test/: conftest.py  test_api.py
